--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ljammerino",
+  "name": "jammerino",
   "version": "0.1.0",
   "description": "It's time to jammerino",
   "main": "index.js",
